# usm-debug-menu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  actor.h  ai_player_controller.h  animation_controller.h  bit.h  color.h  color32.h  common.h  debug_menu.h  debug_menu_extra.h  devopt.h  entity.h  entity_animation_menu.h  entity_base_vhandle.h  entity_handle_manager.h  entity_tracker_manager.h  fe_health_widget.h  femanager.h  fetext.h  fixedstring.h  fixedstring32.h  float.hpp  forwards.h  func_wrapper.h  game.h  game_settings.h  geometry_manager.h  igofrontend.h  input_mgr.h  levelmenu.h  list.hpp  main.c  main.cpp  mashable_vector.h  memory.h  memory_menu.h  mission_manager.h  (+39 more)
.github/workflows/: c-cpp.yml
cmake/: i686-pc-mingw32.cmake
